--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,4 +46,16 @@
         app:layout_constraintLeft_toRightOf="@+id/btn_plus"
         app:layout_constraintTop_toBottomOf="@+id/txt_counter" />
 
+    <ImageView
+        android:id="@+id/iv_meme"
+        android:layout_width="250dp"
+        android:layout_height="200dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/robphoto" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
