--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,14 @@
         app:layout_constraintLeft_toRightOf="@+id/btn_plus"
         app:layout_constraintTop_toBottomOf="@+id/txt_counter" />
 
+    <Button
+        android:id="@+id/btn_hide_show"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hide/Show"
+        app:layout_constraintTop_toBottomOf="@+id/txt_counter"
+        app:layout_constraintRight_toLeftOf="@id/btn_plus"/>
+
     <ImageView
         android:id="@+id/iv_meme"
         android:layout_width="250dp"
